crates/benday-core/tests/snapshots/corpus__case__temporal_promoted_string.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
{
  "size": {
    "columns": 75,
    "rows": 15
  },
  "plot": {
    "x": 3,
    "y": 0,
    "w": 72,
    "h": 13
  },
  "chrome": {
    "axis": "#6a707a",
    "title": "#dee2e8"
  },
  "title": null,
  "legend": [],
  "y_axis": {
    "domain": [
      10.0,
      25.0
    ],
    "step": 5.0,
    "ticks": [
      {
        "value": 10.0,
        "frac": 0.0,
        "label": "10",
        "row": 12
      },
      {
        "value": 15.0,
        "frac": 0.3333333333333333,
        "label": "15",
        "row": 8
      },
      {
        "value": 20.0,
        "frac": 0.6666666666666666,
        "label": "20",
        "row": 4
      },
      {
        "value": 25.0,
        "frac": 1.0,
        "label": "25",
        "row": 0
      }
    ]
  },
  "x_axis": {
    "categories": null,
    "domain": [
      1771804800000.0,
      1775433600000.0
    ],
    "tick_cols": [
      0,
      12,
      24,
      36,
      47,
      59,
      71
    ],
    "labels": [
      {
        "text": "Feb 23 '26",
        "col": 0,
        "row": 14
      },
      {
        "text": "Mar 2",
        "col": 13,
        "row": 14
      },
      {
        "text": "Mar 9",
        "col": 25,
        "row": 14
      },
      {
        "text": "Mar 16",
        "col": 36,
        "row": 14
      },
      {
        "text": "Mar 23",
        "col": 47,
        "row": 14
      },
      {
        "text": "Mar 30",
        "col": 59,
        "row": 14
      },
      {
        "text": "Apr 6",
        "col": 70,
        "row": 14
      }
    ]
  },
  "marks": [
    {
      "Path": {
        "series": {
          "name": null,
          "color": "#00d5ef"
        },
        "points": [
          [
            0.14285714285714285,
            1.0
          ],
          [
            0.47619047619047616,
            0.0
          ],
          [
            0.8809523809523809,
            0.4666666666666667
          ]
        ]
      }
    }
  ],
  "dropped_rows": 0,
  "source": {
    "mark": "line",
    "x_field": "d",
    "y_field": "v",
    "aggregate": null,
    "x_type": "temporal",
    "series_points": [
      3
    ],
    "data_source": "inline_values",
    "truncated": null,
    "total_rows": null
  }
}
