crates/benday-core/tests/snapshots/corpus__case__tick_rhythm.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
{
  "size": {
    "columns": 74,
    "rows": 15
  },
  "plot": {
    "x": 2,
    "y": 0,
    "w": 72,
    "h": 13
  },
  "chrome": {
    "axis": "#6a707a",
    "title": "#dee2e8"
  },
  "title": null,
  "legend": [],
  "y_axis": {
    "domain": [
      0.0,
      6.0
    ],
    "step": 1.0,
    "ticks": [
      {
        "value": 0.0,
        "frac": 0.0,
        "label": "0",
        "row": 12
      },
      {
        "value": 1.0,
        "frac": 0.16666666666666666,
        "label": "1",
        "row": 10
      },
      {
        "value": 2.0,
        "frac": 0.3333333333333333,
        "label": "2",
        "row": 8
      },
      {
        "value": 3.0,
        "frac": 0.5,
        "label": "3",
        "row": 6
      },
      {
        "value": 4.0,
        "frac": 0.6666666666666666,
        "label": "4",
        "row": 4
      },
      {
        "value": 5.0,
        "frac": 0.8333333333333334,
        "label": "5",
        "row": 2
      },
      {
        "value": 6.0,
        "frac": 1.0,
        "label": "6",
        "row": 0
      }
    ]
  },
  "x_axis": {
    "categories": [
      "1",
      "2",
      "3",
      "4",
      "5",
      "6"
    ],
    "domain": null,
    "tick_cols": [],
    "labels": [
      {
        "text": "1",
        "col": 8,
        "row": 14
      },
      {
        "text": "2",
        "col": 20,
        "row": 14
      },
      {
        "text": "3",
        "col": 32,
        "row": 14
      },
      {
        "text": "4",
        "col": 44,
        "row": 14
      },
      {
        "text": "5",
        "col": 56,
        "row": 14
      },
      {
        "text": "6",
        "col": 68,
        "row": 14
      }
    ]
  },
  "marks": [
    {
      "Bars": {
        "bars": [
          {
            "x0": 0.027777777777777776,
            "w": 0.1111111111111111,
            "h": 0.5,
            "color": "#67d191"
          },
          {
            "x0": 0.19444444444444445,
            "w": 0.1111111111111111,
            "h": 0.5,
            "color": "#67d191"
          },
          {
            "x0": 0.3611111111111111,
            "w": 0.1111111111111111,
            "h": 0.5,
            "color": "#67d191"
          },
          {
            "x0": 0.5277777777777778,
            "w": 0.1111111111111111,
            "h": 0.6666666666666666,
            "color": "#a5d16a"
          },
          {
            "x0": 0.6944444444444444,
            "w": 0.1111111111111111,
            "h": 0.16666666666666666,
            "color": "#00bcd0"
          },
          {
            "x0": 0.8611111111111112,
            "w": 0.1111111111111111,
            "h": 1.0,
            "color": "#ffc151"
          }
        ]
      }
    }
  ],
  "dropped_rows": 0,
  "source": {
    "mark": "bar",
    "x_field": "face",
    "y_field": "wins",
    "aggregate": "sum",
    "series_points": [
      1,
      1,
      1,
      1,
      1,
      1
    ],
    "data_source": "inline_values",
    "truncated": null,
    "total_rows": null
  }
}
