crates/benday-core/tests/snapshots/corpus__case__timeunit_dense_hours.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
{
  "size": {
    "columns": 76,
    "rows": 15
  },
  "plot": {
    "x": 4,
    "y": 0,
    "w": 72,
    "h": 13
  },
  "chrome": {
    "axis": "#6a707a",
    "title": "#dee2e8"
  },
  "title": null,
  "legend": [],
  "y_axis": {
    "domain": [
      0.0,
      2.0
    ],
    "step": 0.5,
    "ticks": [
      {
        "value": 0.0,
        "frac": 0.0,
        "label": "0.0",
        "row": 12
      },
      {
        "value": 0.5,
        "frac": 0.25,
        "label": "0.5",
        "row": 9
      },
      {
        "value": 1.0,
        "frac": 0.5,
        "label": "1.0",
        "row": 6
      },
      {
        "value": 1.5,
        "frac": 0.75,
        "label": "1.5",
        "row": 3
      },
      {
        "value": 2.0,
        "frac": 1.0,
        "label": "2.0",
        "row": 0
      }
    ]
  },
  "x_axis": {
    "categories": [
      "2026-06-14 00h",
      "2026-06-14 01h",
      "2026-06-14 02h",
      "2026-06-14 03h",
      "2026-06-14 04h",
      "2026-06-14 05h",
      "2026-06-14 06h",
      "2026-06-14 07h",
      "2026-06-14 08h",
      "2026-06-14 09h",
      "2026-06-14 10h",
      "2026-06-14 11h",
      "2026-06-14 12h",
      "2026-06-14 13h",
      "2026-06-14 14h",
      "2026-06-14 15h",
      "2026-06-14 16h",
      "2026-06-14 17h",
      "2026-06-14 18h",
      "2026-06-14 19h",
      "2026-06-14 20h",
      "2026-06-14 21h",
      "2026-06-14 22h",
      "2026-06-14 23h"
    ],
    "domain": null,
    "tick_cols": [],
    "labels": [
      {
        "text": "Jun 14 00:00",
        "col": 0,
        "row": 14
      },
      {
        "text": "03:00",
        "col": 13,
        "row": 14
      },
      {
        "text": "05:00",
        "col": 19,
        "row": 14
      },
      {
        "text": "07:00",
        "col": 25,
        "row": 14
      },
      {
        "text": "09:00",
        "col": 31,
        "row": 14
      },
      {
        "text": "11:00",
        "col": 37,
        "row": 14
      },
      {
        "text": "13:00",
        "col": 43,
        "row": 14
      },
      {
        "text": "15:00",
        "col": 49,
        "row": 14
      },
      {
        "text": "17:00",
        "col": 55,
        "row": 14
      },
      {
        "text": "19:00",
        "col": 61,
        "row": 14
      },
      {
        "text": "21:00",
        "col": 67,
        "row": 14
      }
    ]
  },
  "marks": [
    {
      "Bars": {
        "bars": [
          {
            "x0": 0.013888888888888888,
            "y0": 0.5,
            "w": 0.027777777777777776,
            "h": 0.5,
            "color": "#67d191"
          },
          {
            "x0": 0.05555555555555555,
            "y0": 1.0,
            "w": 0.027777777777777776,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.09722222222222222,
            "y0": 1.0,
            "w": 0.027777777777777776,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.1388888888888889,
            "y0": 1.0,
            "w": 0.027777777777777776,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.18055555555555555,
            "y0": 1.0,
            "w": 0.027777777777777776,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.2222222222222222,
            "y0": 1.0,
            "w": 0.027777777777777776,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.2638888888888889,
            "y0": 1.0,
            "w": 0.027777777777777776,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.3055555555555556,
            "y0": 1.0,
            "w": 0.027777777777777776,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.3472222222222222,
            "y0": 0.0,
            "w": 0.027777777777777776,
            "h": 1.0,
            "color": "#ffc151"
          },
          {
            "x0": 0.3888888888888889,
            "y0": 1.0,
            "w": 0.027777777777777776,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.4305555555555556,
            "y0": 1.0,
            "w": 0.027777777777777776,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.4722222222222222,
            "y0": 1.0,
            "w": 0.027777777777777776,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.5138888888888888,
            "y0": 1.0,
            "w": 0.027777777777777776,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.5555555555555556,
            "y0": 1.0,
            "w": 0.027777777777777776,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.5972222222222222,
            "y0": 1.0,
            "w": 0.027777777777777776,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.6388888888888888,
            "y0": 1.0,
            "w": 0.027777777777777776,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.6805555555555556,
            "y0": 0.5,
            "w": 0.027777777777777776,
            "h": 0.5,
            "color": "#67d191"
          },
          {
            "x0": 0.7222222222222222,
            "y0": 1.0,
            "w": 0.027777777777777776,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.7638888888888888,
            "y0": 1.0,
            "w": 0.027777777777777776,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.8055555555555556,
            "y0": 1.0,
            "w": 0.027777777777777776,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.8472222222222222,
            "y0": 1.0,
            "w": 0.027777777777777776,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.8888888888888888,
            "y0": 1.0,
            "w": 0.027777777777777776,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.9305555555555556,
            "y0": 1.0,
            "w": 0.027777777777777776,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.9722222222222222,
            "y0": 0.5,
            "w": 0.027777777777777776,
            "h": 0.5,
            "color": "#67d191"
          }
        ],
        "direction": "vertical"
      }
    }
  ],
  "dropped_rows": 0,
  "source": {
    "mark": "bar",
    "x_field": "t",
    "y_field": "t",
    "aggregate": "count",
    "time_unit": "hour",
    "series_points": [
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      2,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      1
    ],
    "data_source": "inline_columns",
    "truncated": null,
    "total_rows": null
  }
}
