crates/benday-core/tests/snapshots/corpus__case__timeunit_hour_count.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
{
  "size": {
    "columns": 76,
    "rows": 15
  },
  "plot": {
    "x": 4,
    "y": 0,
    "w": 72,
    "h": 13
  },
  "chrome": {
    "axis": "#6a707a",
    "title": "#dee2e8"
  },
  "title": null,
  "legend": [],
  "y_axis": {
    "domain": [
      0.0,
      3.0
    ],
    "step": 0.5,
    "ticks": [
      {
        "value": 0.0,
        "frac": 0.0,
        "label": "0.0",
        "row": 12
      },
      {
        "value": 0.5,
        "frac": 0.16666666666666666,
        "label": "0.5",
        "row": 10
      },
      {
        "value": 1.0,
        "frac": 0.3333333333333333,
        "label": "1.0",
        "row": 8
      },
      {
        "value": 1.5,
        "frac": 0.5,
        "label": "1.5",
        "row": 6
      },
      {
        "value": 2.0,
        "frac": 0.6666666666666666,
        "label": "2.0",
        "row": 4
      },
      {
        "value": 2.5,
        "frac": 0.8333333333333334,
        "label": "2.5",
        "row": 2
      },
      {
        "value": 3.0,
        "frac": 1.0,
        "label": "3.0",
        "row": 0
      }
    ]
  },
  "x_axis": {
    "categories": [
      "2026-06-14 09h",
      "2026-06-14 10h",
      "2026-06-14 11h",
      "2026-06-14 12h",
      "2026-06-14 13h",
      "2026-06-14 14h"
    ],
    "domain": null,
    "tick_cols": [],
    "labels": [
      {
        "text": "Jun 14 09:00",
        "col": 4,
        "row": 14
      },
      {
        "text": "10:00",
        "col": 20,
        "row": 14
      },
      {
        "text": "11:00",
        "col": 32,
        "row": 14
      },
      {
        "text": "12:00",
        "col": 44,
        "row": 14
      },
      {
        "text": "13:00",
        "col": 56,
        "row": 14
      },
      {
        "text": "14:00",
        "col": 68,
        "row": 14
      }
    ]
  },
  "marks": [
    {
      "Bars": {
        "bars": [
          {
            "x0": 0.027777777777777776,
            "y0": 0.0,
            "w": 0.1111111111111111,
            "h": 1.0,
            "color": "#ffc151"
          },
          {
            "x0": 0.19444444444444445,
            "y0": 0.6666666666666667,
            "w": 0.1111111111111111,
            "h": 0.3333333333333333,
            "color": "#21c9b5"
          },
          {
            "x0": 0.3611111111111111,
            "y0": 1.0,
            "w": 0.1111111111111111,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.5277777777777778,
            "y0": 1.0,
            "w": 0.1111111111111111,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.6944444444444444,
            "y0": 1.0,
            "w": 0.1111111111111111,
            "h": 0.0,
            "color": "#45aade"
          },
          {
            "x0": 0.8611111111111112,
            "y0": 0.33333333333333337,
            "w": 0.1111111111111111,
            "h": 0.6666666666666666,
            "color": "#a5d16a"
          }
        ],
        "direction": "vertical"
      }
    }
  ],
  "dropped_rows": 0,
  "source": {
    "mark": "bar",
    "x_field": "t",
    "y_field": "t",
    "aggregate": "count",
    "time_unit": "hour",
    "series_points": [
      3,
      1,
      0,
      0,
      0,
      2
    ],
    "data_source": "inline_columns",
    "truncated": null,
    "total_rows": null
  }
}
