crates/benday-core/tests/snapshots/corpus__case__unknown_type_nominal.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
{
  "size": {
    "columns": 63,
    "rows": 12
  },
  "plot": {
    "x": 3,
    "y": 0,
    "w": 60,
    "h": 10
  },
  "chrome": {
    "axis": "#6a707a",
    "title": "#dee2e8"
  },
  "title": null,
  "legend": [],
  "y_axis": {
    "domain": [
      0.0,
      20.0
    ],
    "step": 5.0,
    "ticks": [
      {
        "value": 0.0,
        "frac": 0.0,
        "label": "0",
        "row": 9
      },
      {
        "value": 5.0,
        "frac": 0.25,
        "label": "5",
        "row": 7
      },
      {
        "value": 10.0,
        "frac": 0.5,
        "label": "10",
        "row": 5
      },
      {
        "value": 15.0,
        "frac": 0.75,
        "label": "15",
        "row": 2
      },
      {
        "value": 20.0,
        "frac": 1.0,
        "label": "20",
        "row": 0
      }
    ]
  },
  "x_axis": {
    "categories": [
      "west",
      "east"
    ],
    "domain": null,
    "tick_cols": [],
    "labels": [
      {
        "text": "west",
        "col": 16,
        "row": 11
      },
      {
        "text": "east",
        "col": 46,
        "row": 11
      }
    ]
  },
  "marks": [
    {
      "Bars": {
        "bars": [
          {
            "x0": 0.08333333333333333,
            "w": 0.35,
            "h": 0.5,
            "color": "#67d191"
          },
          {
            "x0": 0.5833333333333334,
            "w": 0.35,
            "h": 1.0,
            "color": "#ffc151"
          }
        ]
      }
    }
  ],
  "dropped_rows": 0,
  "source": {
    "mark": "bar",
    "x_field": "region",
    "y_field": "n",
    "aggregate": "sum",
    "series_points": [
      1,
      1
    ],
    "data_source": "inline_columns",
    "truncated": null,
    "total_rows": null
  }
}
